# Smart-Truck

./: .gitignore  KT_ML_Models_Overview.txt  README.md  config.7z  db_info.py
.claude/: settings.local.json
MCP/: start-chatbot.bat  start-chatbot.sh
MCP/Local-MCP-Math-Server/: main.py  pyproject.toml
MCP/Youtube-MCP-client/: client1.py  client2.py  main.py  pyproject.toml
MCP/smart-truck-client/: app.py  pyproject.toml
MCP/smart-truck-servers/: backend_server.py  ml_server.py  pyproject.toml
agent-classifier/: SYNTHETIC_DATA_PROMPT.md  agent_classifier_training.ipynb  balance_dataset.py  dataset.txt  inference.py
agent-classifier/agent_classifier_export/: config.json  label_classes.npy
backend/: readme.md  requirements.txt
backend/app/: main.py
backend/app/api/: dashboard.py  drivers.py  locations.py  migrate.py  routes_analysis.py  trips.py  vehicles.py
backend/app/core/: config.py  database.py
backend/app/models/: orm.py
backend/app/schemas/: common.py  dashboard.py  driver.py  route.py  trip.py  vehicle.py
config/: __init__.py  database.py  logging_config.py  settings.py
data-analysis/: analyze.py  cleaned_top100.csv  trim.py  trimmed.csv
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/lib/: constants.ts
migrations/: fast_migrate.py  migrate_data.py  schema.sql
ml_service/: requirements.txt
ml_service/app/: main.py
scripts/: backfill_customers.py  refresh_summaries.py
trip-dispatch-analysis/: config.py  migrate_updated.py
trip-dispatch-analysis/backend/: .gitignore
(+41 files in other folders)
