[project]
name = "youtube-mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.11",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.11",
    "python-dotenv>=1.2.2",
    "streamlit>=1.55.0",
]
